# Milan-Project

./: .gitignore  README.md
backend/: .gitignore  pyproject.toml
backend/laptop_review/: main.py  models.py  store.js  utils.py
laptop-reviews/: package-lock.json  package.json
laptop-reviews/src/: About.css  About.jsx  App.css  App.js  Carousel.css  Carousel.jsx  HomePage.js  HomePage.jsx  Infographics.css  Infographics.jsx  LaptopNames.css  LaptopNames.jsx  LoginPage.css  LoginPage.jsx  Navbar.css  Navbar.jsx  Product.css  Product.jsx  ResetPass.jsx  ReviewComponent.jsx  Services.css  Services.jsx  SignUp.css  SignUp.jsx  Testimonials.css  Testimonials.jsx  carch.s  firebase.config.js  index.css  useAuth.js
